$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-02-06 [B] Changed redirect for login/logout pages as appropriate to avoid extraneous messages {Paver}
2009-02-06 [B] Fixed 'cookie_warning' on login page when anonymous access is not allowed {Paver}
2009-02-06 [C] Changed 'disapproved' to 'unapproved' in language keys as appropriate {Paver}
2009-01-19 [B] Fixed missing delimiter in basic.sql on exif table {SaWey}
2009-01-16 [B] Fix "Select a Keyword" list not refreshing to itself when click "Regenerate Dictionary" {Paver}
2009-01-16 [B] Fix "Regenerate Dictionary" including old keywords {Paver}
2009-01-16 [B] Fix bug in picture info for keyword separator in keywords field {Paver}
2009-01-15 [B] Fix approval status based on permissions in edit_one_pic - thread 57344 {Paver}
2009-01-15 [O] EXIF table now uses pid instead of filename for indexing {Nibbler}
2009-01-14 [O] Added universal javascript function selectAll() to be used in all pages with a select/deselect all feature {Nibbler,SaWey}
2009-01-14 [M] Removed include/smtp.inc.php since it is no longer used. {Nibbler}
2009-01-14 [A] Added the albmgr.js to carry out the album and picture manger functionality - thread 57113 {Sameera}
2009-01-14 [O] Cleaned up album/picture manager file codes - thread 57113 {Sameera}
2009-01-14 [B] Fixed duplicate and blank albums in edit_one_pic album list {Paver}
2009-01-14 [C] Remove the picture background color in slideshow - thread 57055 {Sameera}
2009-01-12 [B] Fixed album manager creating user albums in 'No category' - thread 57536 {Paver}
2009-01-10 [A] Implemented admin tool to convert keyword separator {Paver}